Fixed Social Icons on Mobile

--- a/Assignment 3/style.css
+++ b/Assignment 3/style.css
@@ -223,6 +223,7 @@ footer{
     margin: 0;
     padding: 0;
     margin-top:30px;
+    margin-bottom:30px;
 }
 
 .social-icons li{
